--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ICE2</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="welcome">Welcome!</string>
+    <string name="start">Start</string>
+    <string name="username">username</string>
+    <string name="enter_username">Enter Username</string>
+    <string name="login">Login</string>
 </resources>
