--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="hello_world">Hello World!</string>
     <string name="welcome">Welcome!</string>
     <string name="start">Start</string>
-    <string name="username">username</string>
+    <string name="username_label">username</string>
     <string name="enter_username">Enter Username</string>
     <string name="login">Login</string>
+    <string name="password_label">password</string>
 </resources>
